--- a/test_game/index.html
+++ b/test_game/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+  
+</head>
+<body>
 <script>
   //Screen Saver App | October 7 2022 | Luca DalCanto
 let xpos, ypos;
@@ -69,3 +76,8 @@ function moveDown(startX, startY, moveCount) {
 }
 
 </script>
+
+</body>
+</html>
+
+
