--- a/test_game/index.html
+++ b/test_game/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>HTML document</title>
   
 </head>
 <body>
-<p>Hello there</p>
+<p>p tag test</p>
 </body>
 </html>
 
