--- a/test_game/index.html
+++ b/test_game/index.html
@@ -5,7 +5,8 @@
   
 </head>
 <body>
-<p>p tag test</p>
+<p>Test below 1</p>
+<iframe src="http://p5js.org/test/embed.html" width="600px" height="400px"></iframe>
 </body>
 </html>
 
