--- a/test_game/index.html
+++ b/test_game/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
 <html>
-<head>
-<title>HTML document</title>
-  
-</head>
-<body>
-<p>Test below 1</p>
-<iframe src="http://p5js.org/test/embed.html" width="600px" height="400px"></iframe>
-</body>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/p5.js"></script>
+    <script src="sketch.js"></script>
+  </head>
+  <body>
+    <main>
+    </main>
+  </body>
 </html>
-
 
